--- a/Maze3D.html
+++ b/Maze3D.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>3D Maze</title>
+    <link href="Maze3D.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <h1>Create a 3D Maze</h1>
